--- a/Preambulo.tex
+++ b/Preambulo.tex
@@ -6,6 +6,16 @@
 \usepackage{float}
 \usepackage{epsfig}
 \usepackage{color}
+\usepackage[toc,page]{appendix}
+
+\newfloat{lstfloat}{htbp}{lop}
+\floatname{lstfloat}{Listing}
+
+
+\definecolor{javared}{rgb}{0.6,0,0} % for strings
+\definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
+\definecolor{javapurple}{rgb}{0.5,0,0.35} % keywords
+\definecolor{javadocblue}{rgb}{0.25,0.35,0.75} % javadoc
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 %\definecolor{delim}{rgb}{0,0.6,0}
 \definecolor{punct}{RGB}{222,11,11}
@@ -31,8 +41,7 @@
     stepnumber=1,
     showstringspaces=false,
     breaklines=true,
-    frame=lines,
-	backgroundcolor=\color{background},
+    frame=single,
     literate=
      *{:}{{{\color{punct}{:}}}}{1}
       {,}{{{\color{punct}{,}}}}{1}
@@ -41,7 +50,22 @@
       {[}{{{\color{delim}{[}}}}{1}
       {]}{{{\color{delim}{]}}}}{1},
 }
-
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+\lstdefinelanguage{JavaScript}{
+keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+keywordstyle=\color{blue}\bfseries,
+ndkeywords={class, export, boolean, throw, implements, import, this},
+ndkeywordstyle=\color{darkgray}\bfseries,
+identifierstyle=\color{black},
+sensitive=false,
+comment=[l]{//},
+morecomment=[s]{/*}{*/},
+commentstyle=\color{purple}\ttfamily,
+stringstyle=\color{red}\ttfamily,
+morestring=[b]',
+morestring=[b]"
+}
 
 
 
